--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,11 @@
     "axios": "^1.3.4",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.97.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
